dist_man1_MANS=

if BUILD_NOBILITASD
  dist_man1_MANS+=nobilitasd.1
endif

if ENABLE_QT
  dist_man1_MANS+=nobilitas-qt.1
endif

if BUILD_NOBILITAS_CLI
  dist_man1_MANS+=nobilitas-cli.1
endif

if BUILD_NOBILITAS_TX
  dist_man1_MANS+=nobilitas-tx.1
endif

if ENABLE_WALLET
if BUILD_NOBILITAS_WALLET
  dist_man1_MANS+=nobilitas-wallet.1
endif
endif
